# SAIOAWE

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
examples/: mock-crunchyroll-mcp.js
src/: api.rs  config.rs  db.rs  engine.rs  main.rs  mcp.rs  models.rs  ollama.rs  scheduler.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/editor/: AgentNode.tsx  FileDestNode.tsx  FileNode.tsx  SelfLoopEdge.tsx  WorkflowEditor.tsx
web/src/pages/: AgentsPage.tsx  McpPage.tsx  RunsPage.tsx  WorkflowsPage.tsx
